
CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2018

Bug fixes and other improvements

	- Added support for MacOS 10.14 "Mojave": all drawing to windows is done
	  through "layer-backed views" when the app is linked to SDK 10.14.
	- MacOS platform: fix regression in OS 10.13 where an unbundled app
	  had its system menu bar unresponsive.
	- MacOS≥ 10.10 platform: Fl_Window::fullscreen() and fullscreen_off() 
	  no longer call Fl_Window::hide() + Fl_Window::show().
	  The new procedure essentially resizes the window, as done on 
	  the X11+EWMH and Windows platforms. This improves in particular 
	  the possibility to turn an Fl_Gl_Window fullscreen on and off.
	- MacOS platform: Support \r\n as end of line used by recent
	  MS Office apps in clipboard.
	- Add FL/platform.H for compatibility with FLTK 1.4 and higher.
	  This file replaces FL/x.H in FLTK 1.4.0.
	- Fix Fl_Text_Editor overstrike mode (STR #3463).
	- More consistent and optimized "gleam" scheme box drawing.
	- Fix a MinGW build error with new MinGW versions as of Feb 2018
	  (undefined S_OK and __FD_ISSET), see STR #3454.
	- Windows/CMake: Add missing definition of WIN32 for Windows builds.
	  This seems to be necessary for VS2017 and other compilers that
	  don't #define WIN32, but FLTK relies on this preprocessor macro.
	  Autoconf/configure and bundled IDE files #define WIN32 as well.
	- Fix illegal memory access after free when closing fluid (valgrind
	  reports "Invalid read of size 4"), see also STR #3427.
	- Fix crash when closing fluid with Fl_Table (STR #3427).
	- Fix ignored buffer pre-allocation (requestedSize) in Fl_Text_Buffer.
	  See fltk.general "Fl_Text_Buffer constructor bug" on Dec 5, 2016.
	- Fix Fl_Browser background and text color parsing (STR #3376).
	- Fix Windows CreateDC/DeleteDC mismatch (STR #3373).
	- Updated bundled configure scripts config.guess and config.sub.
	- Fix configure --enable-cairo --enable-cairoext,
	  see report in fltk.general: