@@ -3,11 +3,12 @@ CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2018
 
 Bug fixes and other improvements
 
+	- Windows/OpenGL: improved pixel format detection (STR #3119).
 	- Added support for MacOS 10.14 "Mojave": all drawing to windows is done
 	  through "layer-backed views" when the app is linked to SDK 10.14.
 	- MacOS platform: fix regression in OS 10.13 where an unbundled app
 	  had its system menu bar unresponsive.
-	- MacOS≥ 10.10 platform: Fl_Window::fullscreen() and fullscreen_off() 
+	- MacOS 10.10 platform: Fl_Window::fullscreen() and fullscreen_off() 
 	  no longer call Fl_Window::hide() + Fl_Window::show().
 	  The new procedure essentially resizes the window, as done on 
 	  the X11+EWMH and Windows platforms. This improves in particular 
